test/tests/stages/14_pointers/invalid_types/assign_to_address.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[17]:
  int
  identifier(main)
  (
  void
  )
  {
  int
  identifier(x)
  =
  const int(0)
  ;
  &
  identifier(x)
  =
  const int(10)
  ;
  }
